--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">android-magic-8-ball</string>
+    <string name="app_name">Magic 8 Ball</string>
+
+    <array name="ballImages">
+        <item>@drawable/circle1</item>
+        <item>@drawable/circle2</item>
+        <item>@drawable/circle3</item>
+        <item>@drawable/circle4</item>
+        <item>@drawable/circle5</item>
+        <item>@drawable/circle6</item>
+    </array>
 </resources>
